--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,4 +135,15 @@
   .font-playfair {
     font-family: var(--font-playfair-display);
   }
+
+  .scrollbar-hide {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
